--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=sa
 spring.datasource.password=
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/bootsecurity.p12
+server.ssl.key-store-password=QAZwsx#1
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=bootsecurity
